Update sonarcloud properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,9 @@
-sonar.projectKey=isdi-coders-2023_Hugo-Veiga-Final-Project-front-202309-bcn
-sonar.organization=isdi-coders-2023
+sonar.projectKey=HugoVS26_inkventory-front
+sonar.organization=hugo-veiga
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Hugo-Veiga-Final-Project-front-202309-bcn
+#sonar.projectName=inkventory-front
 #sonar.projectVersion=1.0
-
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
